# salute

./: .gitignore  LICENCE  Makefile  README.md  docker-compose.local.yml  docker-compose.yml  manage.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
data/: .gitignore  groups.example.toml  sections.example.csv  team_types.example.csv
docker/: Dockerfile  start.sh
docker/dev/: docker-compose.yml
docs/: authentication.md  development.md  graphql.md  mailing.md  modelling.md  permissions.md
docs/features/: census.md
salute/: asgi.py  settings.py  urls.py  wsgi.py
salute/accounts/: admin.py  apps.py  birdbath.py  factories.py  middleware.py  models.py
salute/accounts/graphql/: graph_types.py  schema.py
salute/accounts/migrations/: 0001_initial.py  0002_add_permissions_fields.py  0003_add_auth0_sub_field.py
salute/accounts/tests/: conftest.py  test_factories.py
salute/accounts/tests/graphql/: test_auth.py  test_current_user_query.py  test_login_credentials_mutation.py  test_refresh_mutation.py  test_revoke_mutation.py  test_schema.py
salute/api/: context.py  schema.py  views.py
salute/api/auth0/: auth.py  types.py  utils.py
salute/api/tests/: test_auth.py  test_queries.py  test_schema.py
salute/api/tests/auth0/: test_auth.py  test_utils.py
salute/core/: admin.py  apps.py  fields.py  models.py  permissions.py  predicates.py
salute/core/management/commands/: generate_test_data.py
salute/core/migrations/: 0001_add_timerange_type.py
salute/hierarchy/: admin.py  apps.py  birdbath.py  constants.py  factories.py  models.py  utils.py
salute/hierarchy/graphql/: graph_filters.py  graph_types.py  schema.py  types.py
salute/hierarchy/migrations/: 0001_initial.py  0002_add_section_mailing_slug.py  0002_add_young_leader_section_type.py  0003_add_locality_to_groups.py  0004_add_primary_site_to_groups_and_sections.py  0005_section_usual_meeting_slot.py  0006_add_osm_id_field.py
salute/hierarchy/tests/: test_models.py
salute/hierarchy/tests/graphql/: conftest.py  test_district_query.py  test_group_list_query.py  test_group_query.py  test_section_list_query.py  test_section_query.py  test_section_types_query.py
salute/integrations/email_octopus/: apps.py  client.py  models.py  schemata.py
salute/integrations/email_octopus/migrations/: 0001_initial.py
salute/integrations/osm/: admin.py  apps.py  client.py  factories.py  models.py  schemata.py
salute/integrations/osm/graphql/: data_loaders.py  graph_types.py
salute/integrations/osm/migrations/: 0001_add_osm_models.py  0001_initial.py
salute/integrations/osm/tests/: test_client.py  test_schemata.py  test_weekly_headcount_query.py
salute/integrations/tsa/: admin.py  apps.py  client.py  models.py
salute/integrations/tsa/schemata/: accreditations.py  people.py  roles.py  teams.py  units.py
salute/integrations/waiting_list/: admin.py  apps.py  client.py  factories.py  models.py
salute/integrations/waiting_list/graphql/: __init__.py  data_loaders.py
salute/integrations/waiting_list/migrations/: 0001_initial.py
salute/integrations/waiting_list/tests/: test_waiting_list_entry.py
salute/integrations/workspace/: admin.py  apps.py  birdbath.py  factories.py  models.py  service.py
salute/integrations/workspace/graphql/: graph_types.py
salute/integrations/workspace/migrations/: 0001_initial.py  0002_link_mailing_group_to_workspace.py
salute/integrations/workspace/tests/: __init__.py
salute/locations/: admin.py  apps.py  birdbath.py  constants.py  factories.py  models.py
salute/locations/graphql/: graph_types.py  schema.py
salute/locations/migrations/: 0001_initial.py  0002_add_include_in_centroid_calculation_site_field.py
salute/locations/tests/: test_models.py
salute/locations/tests/graphql/: test_site_list_query.py  test_site_query.py
salute/mailing_groups/: admin.py  apps.py  factories.py  models.py  schema.py
salute/mailing_groups/graphql/: graph_filters.py  graph_types.py  schema.py
salute/mailing_groups/management/commands/: update_mailing_groups.py
salute/mailing_groups/migrations/: 0001_initial.py  0002_add_fallback_groups.py  0003_add_group_mailing_preferences.py  0004_add_system_mailing_group_team_relation.py  0005_add_mailing_group_short_name.py
salute/mailing_groups/tests/: test_schema.py
salute/mailing_groups/tests/graphql/: test_system_mailing_group_list_query.py  (+1 more)
salute/people/: admin.py  apps.py  birdbath.py  factories.py  models.py  utils.py
salute/people/graphql/: data_loaders.py  graph_types.py  schema.py
salute/people/migrations/: 0001_initial.py  0002_fix_tsa_email_priority.py
salute/people/tests/: test_models.py  test_utils.py
salute/roles/: admin.py  apps.py  factories.py  models.py
salute/roles/graphql/: data_loaders.py  graph_filters.py  graph_types.py  schema.py
salute/roles/migrations/: 0001_initial.py  0002_add_fields_to_team_type.py  0002_team_type_nickname.py  0003_add_members_can_send_as_to_team_type.py  0004_add_team_level_field.py  0005_add_role_type_display_priority.py  0006_add_related_teams.py  0007_add_team_type_description.py  0008_teamtype_mailing_name_prefix_for_district_teams.py  0009_add_role_type_category_fields.py  0010_add_is_youth_member_to_role_type.py  0011_add_mailing_list_filterable.py
salute/roles/tests/: test_models.py
salute/settings/: base.py  dev.py  local.py.example  prod.py
salute/stats/: admin.py  apps.py  models.py
salute/stats/graphql/: data_loaders.py  graphql_types.py
salute/stats/migrations/: 0001_add_json_sum_functions.py  0002_add_section_census_return.py  0003_add_team_summary_record.py  0004_add_unit_summary_models.py  0005_remove_unneeded_fields_from_team_summary_records.py
salute/stats/tests/: test_db_functions.py  test_models.py
salute/wifi/: admin.py  apps.py  factories.py  models.py  repository.py
salute/wifi/graphql/: graph_types.py
salute/wifi/migrations/: 0001_initial.py
salute/wifi/tests/: test_repository.py
salute/workspace/: admin.py  apps.py  models.py
salute/workspace/migrations/: 0002_groups.py
(+38 files in other folders)
