[tool.poetry]
name = "salute"
package-mode = false
authors = ["Dan Trickey <git@trickey.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.0"
django-choices-field = "^2.3.0"
django-cors-headers = "^4.7.0"
django-environ = "^0.12.0"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^8.0.0"}
google-api-python-client = "^2.166.0"
joserfc = "^1.0.4"
pydantic = "^2.11.2"
requests = "^2.32.3"
rules = "^3.5"
strawberry-graphql = "~0.263.2"
strawberry-graphql-django = "~0.58.0"
tqdm = "^4.67.1"
whitenoise = "^6.9.0"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^5.1.0"
django-stubs = {version = "^5.1.3", extras = ["compatible-mypy"]}
factory-boy = "3.3.2"  # 3.3.3 exports incompatible type hints
mypy = "^1.15.0"
pytest = "^8.3.5"
ruff = "^0.11.4"
pytest-cov = "^6.1.0"
pytest-django = "^4.11.1"
types-requests = "^2.32.0.20250328"
responses = "^0.25.7"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.11"

[tool.poetry.group.prod.dependencies]
granian = "^2.2.1"
psycopg = "^3.2.6"
sentry-sdk = {extras = ["django"], version = "^2.25.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "B",
    "BLE",
    "C4",
    "COM",
    "DJ",
    "DTZ",
    "E",
    "F",
    "FA",
    "FBT",
    "I",
    "N",
    "S",
    "T10",
    "UP",
    "W",
]
ignore = [
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "B009",    # Do not call `getattr` with a constant attribute value.
    "COM812",  # Conflicts with formatter
    "N999",    # Invalid module name
    "S101",    # S101 Use of `assert` detected
]

[tool.ruff.lint.isort.sections]
# Group all Django imports into a separate section.
"django" = ["django"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

warn_unused_ignores = true

strict_optional = true
no_implicit_optional = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["debug_toolbar.*", "factory.*", "googleapiclient.discovery.*", "phonenumber_field.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["*.tests.*"]
disable_error_code = ["arg-type"]

[tool.django-stubs]
django_settings_module = "salute.settings.dev"

[tool.coverage.run]
omit = [
    # omit migrations and tests from test coverage
    "*/migrations/*",
    "*/tests/*",
]